set external links and summary description

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <header class="site-header">
     <div class="container">
       <div>
-        <a href="#" class="logo">EL34 Skyline OD Special | Amp Sim</a>
+        <a href="#!" class="logo">EL34 Skyline OD Special | Amp Sim</a>
         <img src="images/logo.png" class="logo-img" alt="">
       </div>
       <nav>
         <ul>
 
-          <li><a href="mailto:brandon.air.web@gmail.com">All Plugins</a></li>
+          <li><a href="https://brandonwingerair.github.io/audio-plugins">All Plugins</a></li>
           <li><a href="mailto:brandon.air.web@gmail.com">Contact</a></li>
         </ul>
       </nav>
@@ -29,7 +29,7 @@
     <div class="container">
       <h1>Amplifier Simulation Plugin</h1>
       <p></p>
-      <a href="https://www.patreon.com/posts/135443320" target="_blank" class="btn-primary">Free Download</a>
+      <a href="https://www.patreon.com/posts/136108570" target="_blank" class="btn-primary">Free Download</a>
     </div>
   </section>
 
@@ -68,7 +68,7 @@
 
   <section id="requirements" class="requirements">
     <div class="container">
-      <h2>Authentic Speaker Cabinet Simulation</h2>
+      <h2>Speaker Cabinet Simulation</h2>
       <p>Recreation of the rare EL34 Skyline Overdrive Special</p>
     </div>
     <div class="container">
