add external link support button

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 
   <footer class="site-footer">
     <div class="container">
+      <a href="https://streamelements.com/stummyhz-81691/tip" target="_blank" class="tip-link">
+        Support future development ☕
+      </a>
       <p>&copy; 2025 Overboard Audio Software by <a href="https://brandonwingerair.github.io/full-stack-dev-portfolio/" target="_blank">Brandon Winger-Air</a> 🎸 All rights reserved.</p>
       <div class="social">
         <a href="https://www.youtube.com/@stummyhz" target="_blank" aria-label="YouTube">Youtube</a>
