--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
       <!-- <h2>Screenshots</h2> -->
       <div class="screenshots-grid">
-        <img src="/images/screenshot.png" />
+        <img src="images/screenshot.png" />
       </div>
     </div>
   </section>
